--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logoSW.png" />
     <link href="/dist/main.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title class="text-red-700">Vite + React + TS</title>
+    <title class="text-red-700">Star Wars</title>
   </head>
   <body>
     <div id="root"></div>
